--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,5 +8,7 @@
   <p> <%= product.quantity %> </p>
 
   <%= link_to "ver produto", product %>
+  <%= link_to "editar produto", edit_product_path(product) %>
+  <%= button_to 'apagar', product, method: :delete, form: {data: { turbo_confirm: "Você quer apagar este produto?" }} %>
   
 <% end %>
